클래스 이름 변경

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="model"
-            type="com.leebeebeom.closetnote.ui.signin.resetpassword.ResetPasswordVIewModel" />
+            type="com.leebeebeom.closetnote.ui.signin.resetpassword.ResetPasswordViewModel" />
     </data>
 
     <com.leebeebeom.closetnote.ui.view.LockableScrollView
