레이아웃 변경

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -31,7 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_18sdp"
                 android:text="@string/reset_password"
-                android:textSize="@dimen/_20sdp"
+                android:alpha="0.9"
+                android:textSize="@dimen/_18sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +46,7 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:alpha="0.8"
                 android:text="@string/sign_in_email_is_empty"
-                android:textSize="@dimen/_12sdp"
+                android:textSize="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />
 
@@ -63,15 +64,15 @@
                 <com.leebeebeom.closetnote.ui.view.CustomEditText
                     android:id="@+id/etEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_44sdp"
+                    android:layout_height="@dimen/_40sdp"
                     android:inputType="textEmailAddress"
                     android:text="@={model.emailLive}" />
             </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
 
             <com.leebeebeom.closetnote.ui.view.CustomButton
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_4sdp"
+                android:layout_height="@dimen/_36sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/ballet_harmony"
                 android:onClick="@{() -> resetPasswordFragment.sendPasswordResetEmail()}"
                 android:text="@string/reset_password_next"
