--- a/app/src/main/res/layout/fragment_re_verification.xml
+++ b/app/src/main/res/layout/fragment_re_verification.xml
@@ -38,7 +38,7 @@
             <com.leebeebeom.closetnote.ui.view.CustomButton
                 android:id="@+id/btnCheck"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_36sdp"
                 android:onClick="@{() -> fragment.openEmail()}"
                 android:text="@string/send_reset_password_email_lets_check"
                 android:textColor="?colorPrimary"
@@ -52,10 +52,11 @@
             <com.leebeebeom.closetnote.ui.view.CustomButton
                 android:id="@+id/btnReSend"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_36sdp"
                 android:layout_marginEnd="@dimen/_4sdp"
                 android:layout_marginRight="@dimen/_4sdp"
                 android:text="@string/re_verification_resend"
+                android:onClick="@{() -> fragment.reSend()}"
                 android:textColor="?colorPrimary"
                 app:backgroundTint="?myColorControl"
                 app:layout_constraintEnd_toStartOf="@+id/btnCheck"
