--- a/app/src/main/res/layout/fragment_sign_in_include_sign_in_buttons.xml
+++ b/app/src/main/res/layout/fragment_sign_in_include_sign_in_buttons.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="fragment"
+            type="com.leebeebeom.closetnote.ui.signin.SignInFragment" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -15,6 +22,7 @@
             android:text="@string/sign_in_with_google"
             android:textColor="@color/black"
             app:backgroundTint="@color/white"
+            android:onClick="@{() -> fragment.googleSignIn()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,6 +37,7 @@
             android:text="@string/sign_in_with_naver"
             android:textColor="@color/white"
             app:backgroundTint="#03C75A"
+            android:onClick="@{() -> fragment.naverSignIn()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnGoogle"
@@ -42,6 +51,7 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/icon_kakao_small"
             android:text="@string/sign_in_with_kakao"
+            android:onClick="@{() -> fragment.kakaoSignIn()}"
             android:textColor="@color/black"
             app:backgroundTint="#FEE500"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +70,7 @@
             android:paddingVertical="@dimen/_11sdp"
             android:paddingStart="@dimen/_20sdp"
             android:paddingLeft="@dimen/_20sdp"
+            android:onClick="@{() -> fragment.facebooSignIn()}"
             android:paddingEnd="0dp"
             android:paddingRight="0dp"
             android:text="@string/sign_in_with_facebook"
