레이아웃 표현식 추가

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="android.text.TextUtils" />
         <variable
             name="resetPasswordFragment"
             type="com.leebeebeom.closetnote.ui.signin.resetpassword.ResetPasswordFragment" />
@@ -74,7 +74,7 @@
                 android:layout_height="@dimen/_36sdp"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/ballet_harmony"
-                android:onClick="@{() -> resetPasswordFragment.sendPasswordResetEmail()}"
+                android:onClick="@{() -> TextUtils.isEmpty(model.emailLive.trim) ? resetPasswordFragment.setEmailEmptyError() : resetPasswordFragment.sendPasswordResetEmail()}"
                 android:text="@string/reset_password_next"
                 android:textColor="?colorPrimary"
                 app:backgroundTint="?myColorControl"
