--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -70,7 +70,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_44sdp"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:onClick="@{() -> signInFragment.emailSignIn()}"
+                    android:onClick="@{() -> model.textsNotEmpty ? signInFragment.emailSignIn() : signInFragment.setEmptyError()}"
                     android:text="@string/sign_in"
                     android:textColor="?colorPrimary"
                     app:backgroundTint="?myColorControl"
@@ -92,6 +92,7 @@
                     android:id="@+id/signInButtons"
                     layout="@layout/fragment_sign_in_include_sign_in_buttons"
                     android:layout_width="0dp"
+                    app:fragment="@{signInFragment}"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toTopOf="@id/or2"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -138,6 +139,7 @@
                     android:alpha="0.7"
                     android:text="@string/sign_in_anonymously"
                     android:textSize="@dimen/_9sdp"
+                    android:onClick="@{() -> signInFragment.signInAnonymously()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tvSlash"
                     app:layout_constraintTop_toBottomOf="@id/or2" />
