--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,13 +14,15 @@
         <item name="colorOnBackground">#FFFFFF</item>
         <item name="colorOnSurface">#FFFFFF</item>
         <item name="colorOnError">#000000</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="android:colorControlActivated" tools:targetApi="l">@color/white</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">#000000</item>
 
         <!-- Customize your theme here. -->
         <!--        phone navigation bar color-->
-        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">#000000</item>
         <!--        menu color-->
         <item name="android:textColorSecondary">@android:color/white</item>
         <!--        text color-->
@@ -45,6 +47,7 @@
         <item name="actionButtonStyle">@style/myMenuPadding</item>
         <item name="android:includeFontPadding">false</item>
         <item name="myCardViewBackground">#FF080808</item>
+        <item name="myIndicatorColor">#696969</item>
     </style>
     <!--    bottom navigation active color-->
     <style name="myBottomNavActiveColor" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -56,9 +59,5 @@
         <!--        single choice item text color-->
         <item name="android:textColorAlertDialogListItem">@color/white</item>
         <item name="android:textSize">@dimen/_12sdp</item>
-    </style>
-    <!--    edit text focused outline-->
-    <style name="myOutlineEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="colorPrimary">@color/white</item>
     </style>
 </resources>
