--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,17 +14,19 @@
         <item name="colorOnBackground">@color/black</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="colorOnError">@color/white</item>
+        <item name="colorControlActivated">@color/black</item>
+        <item name="android:colorControlActivated" tools:targetApi="l">@color/black</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <!-- status bar text color -->
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="M">true</item>
 
         <!-- Customize your theme here. -->
         <!--        phone navigation bar color-->
-        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">@color/white</item>
         <!--        phone navigation bar icon color-->
-        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="O_MR1">true</item>
         <!--        menu color-->
         <item name="android:textColorSecondary">@android:color/black</item>
         <!--        text color-->
@@ -49,6 +51,7 @@
         <item name="actionButtonStyle">@style/myMenuPadding</item>
         <item name="android:includeFontPadding">false</item>
         <item name="myCardViewBackground">@color/white</item>
+        <item name="myIndicatorColor">#D3D3D3</item>
     </style>
     <!--    actionMode close button gone-->
     <style name="myActionBarCloseButton">
@@ -76,7 +79,7 @@
     </style>
     <!--    edit text focused outline-->
     <style name="myOutlineEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="colorPrimary">@color/black</item>
+        <item name="boxStrokeColor">@color/outlined_edit_text</item>
     </style>
     <!--    action bar title style-->
     <style name="myActionBarTitleStyle">
@@ -108,4 +111,5 @@
     <attr name="myColorControl" format="color" />
     <attr name="treeBackgroundColor" format="color" />
     <attr name="myCardViewBackground" format="color" />
+    <attr name="myIndicatorColor" format="color"/>
 </resources>
