--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -16,55 +16,44 @@
             app:enterAnim="@anim/fragment_slide_in"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_enter_anim"
-            app:popExitAnim="@anim/fragment_slide_out" />
+            app:popExitAnim="@anim/fragment_slide_out">
+            <argument
+                android:name="categoryId"
+                app:argType="long" />
+            <argument
+                android:name="parentId"
+                app:argType="long" />
+            <argument
+                android:name="parentIndex"
+                app:argType="integer" />
+        </action>
         <action
             android:id="@+id/toAddCategory"
-            app:destination="@id/nav_graph_add_category" />
+            app:destination="@id/nav_graph_add_category">
+            <argument
+                android:name="parentIndex"
+                app:argType="integer" />
+        </action>
         <action
             android:id="@+id/toEditCategoryName"
-            app:destination="@id/nav_graph_edit_category_name" />
+            app:destination="@id/nav_graph_edit_category_name">
+            <argument
+                android:name="id"
+                app:argType="long" />
+            <argument
+                android:name="name"
+                app:argType="string" />
+            <argument
+                android:name="parentIndex"
+                app:argType="integer" />
+        </action>
         <action
             android:id="@+id/toDeleteCategories"
             app:destination="@id/deleteCategoriesDialog" />
         <action
             android:id="@+id/toSortMain"
             app:destination="@id/sortMainDialog" />
-        <action
-            android:id="@+id/toSignInFragment"
-            app:destination="@id/nav_graph_sign"
-            app:enterAnim="@anim/fragment_slide_in"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_enter_anim"
-            app:popExitAnim="@anim/fragment_slide_out" />
     </fragment>
-
-    <navigation
-        android:id="@+id/nav_graph_edit_category_name"
-        app:startDestination="@id/editCategoryNameDialog">
-        <argument
-            android:name="id"
-            app:argType="long" />
-        <argument
-            android:name="name"
-            app:argType="string" />
-        <argument
-            android:name="parentIndex"
-            app:argType="integer" />
-
-        <dialog
-            android:id="@+id/editCategoryNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.category.EditCategoryNameDialog"
-            android:label="EditCategoryNameDialog">
-            <action
-                android:id="@+id/toEditSameCategoryName"
-                app:destination="@id/editSameCategoryNameDialog" />
-        </dialog>
-
-        <dialog
-            android:id="@+id/editSameCategoryNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.category.EditSameCategoryNameDialog"
-            android:label="EditSameCategoryNameDialog" />
-    </navigation>
 
     <dialog
         android:id="@+id/deleteCategoriesDialog"
@@ -75,336 +64,12 @@
             app:argType="long[]" />
     </dialog>
 
-    <navigation
-        android:id="@+id/nav_graph_add_category"
-        app:startDestination="@id/addCategoryDialog">
-        <argument
-            android:name="parentIndex"
-            app:argType="integer" />
-
-        <dialog
-            android:id="@+id/addCategoryDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.category.AddCategoryDialog"
-            android:label="AddCategoryDialog">
-            <action
-                android:id="@+id/toAddSameCategoryName"
-                app:destination="@id/addSameCategoryNameDialog" />
-        </dialog>
-
-        <dialog
-            android:id="@+id/addSameCategoryNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.category.AddSameCategoryNameDialog"
-            android:label="AddSameNameCategoryDialog" />
-    </navigation>
-
     <dialog
         android:id="@+id/sortMainDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.sort.SortMainDialog"
         android:label="SortMainDialog" />
 
-    <navigation
-        android:id="@+id/nav_graph_list"
-        android:label=""
-        app:startDestination="@id/listFragment">
-        <argument
-            android:name="categoryId"
-            app:argType="long" />
-        <argument
-            android:name="parentId"
-            app:argType="long" />
-        <argument
-            android:name="parentIndex"
-            app:argType="integer" />
-
-        <fragment
-            android:id="@+id/listFragment"
-            android:name="com.leebeebeom.closetnote.ui.main.list.ListFragment"
-            tools:layout="@layout/fragment_list">
-            <action
-                android:id="@+id/toSelf"
-                app:destination="@id/nav_graph_list"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-            <action
-                android:id="@+id/toDeleteFolderAndSizes"
-                app:destination="@id/deleteFolderAndSizesDialog" />
-            <action
-                android:id="@+id/toSize"
-                app:destination="@id/nav_graph_size"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-            <action
-                android:id="@+id/toSortList"
-                app:destination="@id/sortListDialog" />
-        </fragment>
-
-        <dialog
-            android:id="@+id/deleteFolderAndSizesDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.delete.DeleteFolderAndSizesDialog"
-            android:label="DeleteFolderAndSizesDialog">
-            <argument
-                android:name="selectedFolderIds"
-                app:argType="long[]" />
-            <argument
-                android:name="selectedSizeIds"
-                app:argType="long[]" />
-        </dialog>
-
-        <navigation
-            android:id="@+id/nav_graph_size"
-            app:startDestination="@id/sizeFragment">
-            <argument
-                android:name="parentId"
-                app:argType="long" />
-            <argument
-                android:name="sizeId"
-                app:argType="long" />
-            <argument
-                android:name="parentIndex"
-                app:argType="integer" />
-
-            <fragment
-                android:id="@+id/sizeFragment"
-                android:name="com.leebeebeom.closetnote.ui.main.size.SizeFragment"
-                android:label=""
-                tools:layout="@layout/fragment_size">
-                <action
-                    android:id="@+id/toGoBack"
-                    app:destination="@id/goBackDialog" />
-                <action
-                    android:id="@+id/toDeleteImage"
-                    app:destination="@id/deleteImageDialog" />
-                <action
-                    android:id="@+id/toDeleteSize"
-                    app:destination="@id/deleteSizeDialog" />
-            </fragment>
-
-            <dialog
-                android:id="@+id/deleteSizeDialog"
-                android:name="com.leebeebeom.closetnote.ui.dialog.delete.DeleteSizeDialog"
-                android:label="DeleteSizeDialog">
-                <argument
-                    android:name="id"
-                    app:argType="long" />
-            </dialog>
-
-            <dialog
-                android:id="@+id/deleteImageDialog"
-                android:name="com.leebeebeom.closetnote.ui.dialog.DeleteImageDialog"
-                android:label="DeleteImageDialog" />
-
-            <dialog
-                android:id="@+id/goBackDialog"
-                android:name="com.leebeebeom.closetnote.ui.dialog.GoBackDialog"
-                android:label="GoBackDialog" />
-        </navigation>
-
-        <dialog
-            android:id="@+id/sortListDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.sort.SortListDialog"
-            android:label="SortListDialog" />
-
-        <action
-            android:id="@+id/toAddCategory"
-            app:destination="@id/nav_graph_add_category" />
-        <action
-            android:id="@+id/toEditFolderName"
-            app:destination="@id/nav_graph_edit_folder_name" />
-        <action
-            android:id="@+id/toTreeView"
-            app:destination="@id/nav_graph_tree_view" />
-        <action
-            android:id="@+id/toAddFolder"
-            app:destination="@id/nav_graph_add_folder" />
-    </navigation>
-
-    <navigation
-        android:id="@+id/nav_graph_edit_folder_name"
-        app:startDestination="@id/editFolderNameDialog">
-        <argument
-            android:name="id"
-            app:argType="long" />
-        <argument
-            android:name="name"
-            app:argType="string" />
-        <argument
-            android:name="parentId"
-            app:argType="long" />
-
-        <dialog
-            android:id="@+id/editFolderNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.folder.EditFolderNameDialog"
-            android:label="EditFolderNameDialog">
-            <action
-                android:id="@+id/toEditSameFolderName"
-                app:destination="@id/editSameFolderNameDialog" />
-        </dialog>
-
-        <dialog
-            android:id="@+id/editSameFolderNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.folder.EditSameFolderNameDialog"
-            android:label="EditSameFolderNameDialog" />
-    </navigation>
-
-    <navigation
-        android:id="@+id/nav_graph_tree_view"
-        app:startDestination="@id/treeViewDialog">
-        <argument
-            android:name="parentIndex"
-            app:argType="integer" />
-        <argument
-            android:name="selectedFolderIds"
-            app:argType="long[]" />
-        <argument
-            android:name="selectedSizeIds"
-            app:argType="long[]" />
-        <argument
-            android:name="categoryId"
-            app:argType="long" />
-        <argument
-            android:name="currentPositionId"
-            app:argType="long" />
-        <argument
-            android:name="folderPathIds"
-            app:argType="long[]" />
-
-        <dialog
-            android:id="@+id/treeViewDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.tree.TreeViewDialog"
-            android:label="TreeViewDialog">
-            <action
-                android:id="@+id/toMoveFolderAndSizeDialog"
-                app:destination="@id/moveFolderAndSizeDialog" />
-        </dialog>
-
-        <dialog
-            android:id="@+id/moveFolderAndSizeDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.MoveFolderAndSizeDialog"
-            android:label="MoveFolderAndSizeDialog">
-            <argument
-                android:name="selectedFolderIds"
-                app:argType="long[]" />
-            <argument
-                android:name="selectedSizeIds"
-                app:argType="long[]" />
-            <argument
-                android:name="targetId"
-                app:argType="long" />
-        </dialog>
-
-        <action
-            android:id="@+id/toAddCategory"
-            app:destination="@id/nav_graph_add_category" />
-        <action
-            android:id="@+id/toAddFolder"
-            app:destination="@id/nav_graph_add_folder" />
-    </navigation>
-
-    <navigation
-        android:id="@+id/nav_graph_add_folder"
-        app:startDestination="@id/addFolderDialog">
-        <argument
-            android:name="parentId"
-            app:argType="long" />
-        <argument
-            android:name="parentIndex"
-            app:argType="integer" />
-        <dialog
-            android:id="@+id/addFolderDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.folder.AddFolderDialog"
-            android:label="AddFolderDialog">
-            <action
-                android:id="@+id/toAddSameFolderName"
-                app:destination="@id/addSameFolderNameDialog" />
-        </dialog>
-
-        <dialog
-            android:id="@+id/addSameFolderNameDialog"
-            android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.folder.AddSameFolderNameDialog"
-            android:label="AddSameFolderNameDialog" />
-    </navigation>
-    <navigation
-        android:id="@+id/nav_graph_sign"
-        app:startDestination="@id/signInFragment">
-        <fragment
-            android:id="@+id/signInFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.SignInFragment"
-            android:label=""
-            tools:layout="@layout/fragment_sign_in">
-            <action
-                android:id="@+id/toSignUpFragment"
-                app:destination="@id/signUpFragment"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-            <deepLink
-                android:id="@+id/deepLink"
-                app:action="ACTION_VIEW"
-                app:uri="https://www.colosetnote.com/login" />
-            <action
-                android:id="@+id/toResetPasswordFragment"
-                app:destination="@id/resetPasswordFragment"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-            <action
-                android:id="@+id/toReVerificationFragment"
-                app:destination="@id/reVerificationFragment"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-        </fragment>
-        <fragment
-            android:id="@+id/signUpFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.signup.SignUpFragment"
-            android:label=""
-            tools:layout="@layout/fragment_sign_up">
-            <action
-                android:id="@+id/toVerificationFragment"
-                app:destination="@id/verificationFragment"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-        </fragment>
-        <fragment
-            android:id="@+id/verificationFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.signup.verification.VerificationFragment"
-            android:label=""
-            tools:layout="@layout/fragment_verification" />
-        <fragment
-            android:id="@+id/resetPasswordFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.resetpassword.ResetPasswordFragment"
-            android:label=""
-            tools:layout="@layout/fragment_reset_password">
-            <action
-                android:id="@+id/toSendResetPasswordEmailFragment"
-                app:destination="@id/sendResetPasswordEmailFragment"
-                app:enterAnim="@anim/fragment_slide_in"
-                app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_enter_anim"
-                app:popExitAnim="@anim/fragment_slide_out" />
-        </fragment>
-        <fragment
-            android:id="@+id/sendResetPasswordEmailFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.resetpassword.sendrestapsswordemail.SendResetPasswordEmailFragment"
-            android:label=""
-            tools:layout="@layout/fragment_send_reset_password_email">
-            <argument
-                android:name="email"
-                app:argType="string" />
-        </fragment>
-        <fragment
-            android:id="@+id/reVerificationFragment"
-            android:name="com.leebeebeom.closetnote.ui.signin.reverification.ReVerificationFragment"
-            android:label=""
-            tools:layout="@layout/fragment_re_verification" />
-    </navigation>
+    <include app:graph="@navigation/nav_graph_edit_category_name" />
+    <include app:graph="@navigation/nav_graph_add_category" />
+    <include app:graph="@navigation/nav_graph_list" />
 </navigation>
